# demo-sandbox

./: README.md  README_CORE_LITE.md  pyproject.toml
.github/workflows/: core-lite-posture-smoke-test.yml
docs/: core_lite_activation_receipt.md  core_lite_status.md
experiments/: __init__.py  experiment_suite.py
invariants/: __init__.py  bcat_invariants.py  gcat_invariants.py
sandbox/: __init__.py  ephemeral_sandbox.py
tools/: verify_core_lite_workflows.py
