[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stegverse-demo-sandbox"
version = "1.0.0"
description = "Sandbox environment for StegVerse governance experiments and invariant validation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "StegVerse", email = "dev@stegverse.org"}
]
keywords = ["sandbox", "experiments", "stegverse", "invariants", "governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "stegverse-sdk>=1.0.1",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/StegVerse-org/demo-sandbox"
Repository = "https://github.com/StegVerse-org/demo-sandbox"
Issues = "https://github.com/StegVerse-org/demo-sandbox/issues"
